# mini-twitter-microservices

./: README.md  compose.deploy.yml  compose.yml  setup.sh
frontend/: Dockerfile  compose.yml  package.json
frontend/src/: App.tsx
gateway/: requirements.txt
gateway/src/entrypoint/: config.py
gateway/src/routers/: __init__.py  note_service_router.py  root_router.py
services/note-service/: .env.example  Dockerfile  compose.yml  go.mod
services/note-service/cmd/app/: main.go
services/tweet-service/: .env.example  Dockerfile  compose.yml  pyproject.toml
services/tweet-service/tweet_service_api/: main.py
services/tweet-service/tweet_service_api/config/: config.py
services/tweet-service/tweet_service_api/controllers/http/: __init__.py  root_controller.py  tweet_controller.py
services/tweet-service/tweet_service_api/controllers/schemas/: tweet.py
services/tweet-service/tweet_service_api/domain/: tweet.py
services/user-service/: .gitignore  Dockerfile  compose.yml  requirements.txt
services/user-service/alembic/versions/: 3869522ae0ca_add_message_table.py  4fea0fc92fc2_initial.py  fcbe36430916_initial.py
services/user-service/src/clients/: __init__.py  redis_client.py
services/user-service/src/core/: broker.py  permissions.py
services/user-service/src/entrypoint/: config.py  setup.py
services/user-service/src/models/: __init__.py  base.py  message.py  user.py
services/user-service/src/repositories/: __init__.py  message.py  user.py
services/user-service/src/routers/: __init__.py  dev_router.py  message_router.py  root_router.py  (+1 more)
(+15 files in other folders)
