[project]
name = "tweet-service"
version = "0.1.0"
description = "tweet service for mini twitter"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.1.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.3",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]
